--- a/Assignment6/styles/form-labels-on-top.css
+++ b/Assignment6/styles/form-labels-on-top.css
@@ -2,6 +2,9 @@ html{
     background-color: #f3f3f3;
 }
 
+#billingForm {
+    margin-top: 30px;
+}
 .form-labels-on-top{
     box-sizing: border-box;
     max-width: 475px;
